diesel_compile_tests/tests/fail/find_requires_correct_type.stderr
error[E0277]: the trait bound `str: Expression` is not satisfied
  --> tests/fail/find_requires_correct_type.rs:20:28
   |
LL |     int_primary_key::table.find("1");
   |                            ^^^^ the trait `Expression` is not implemented for `str`
   |
   = help: the following other types implement trait `Expression`:
             &T
             AliasedField<S, C>
             Arc<T>
             Box<T>
             CaseWhen<..., ...>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, ...>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, ...>
             Collate<T, C>
           and N others
   = note: required for `&str` to implement `Expression`
   = note: 1 redundant requirement hidden
   = note: required for `Eq<id, &str>` to implement `Expression`
   = note: required for `SelectStatement<FromClause<table>>` to implement `FilterDsl<Grouped<Eq<id, &str>>>`

   
error[E0277]: the trait bound `str: ValidGrouping<()>` is not satisfied
  --> tests/fail/find_requires_correct_type.rs:20:28
   |
LL |     int_primary_key::table.find("1");
   |                            ^^^^ the trait `ValidGrouping<()>` is not implemented for `str`
   |
   = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
             AliasedField<S, C>
             int_primary_key::columns::id
             pg::metadata_lookup::pg_namespace::columns::nspname
             pg::metadata_lookup::pg_namespace::columns::oid
             pg::metadata_lookup::pg_type::columns::oid
             pg::metadata_lookup::pg_type::columns::typarray
             pg::metadata_lookup::pg_type::columns::typname
             pg::metadata_lookup::pg_type::columns::typnamespace
           and N others
   = note: required for `&str` to implement `ValidGrouping<()>`
   = note: 1 redundant requirement hidden
   = note: required for `Eq<id, &str>` to implement `ValidGrouping<()>`
   = note: required for `Grouped<Eq<id, &str>>` to implement `NonAggregate`
   = note: required for `SelectStatement<FromClause<table>>` to implement `FilterDsl<Grouped<Eq<id, &str>>>`

   
error[E0277]: the trait bound `{integer}: Expression` is not satisfied
   --> tests/fail/find_requires_correct_type.rs:24:36
    |
 LL |     string_primary_key::table.find(1);
    |                               ---- ^ the trait `Expression` is not implemented for `{integer}`
    |                               |
    |                               required by a bound introduced by this call
    |
    = help: the following other types implement trait `Expression`:
              &T
              AliasedField<S, C>
              Arc<T>
              Box<T>
              CaseWhen<..., ...>
              CaseWhen<CaseWhenConditionsLeaf<W, T>, ...>
              CaseWhen<CaseWhenConditionsLeaf<W, T>, ...>
              Collate<T, C>
            and N others
    = note: required for `Eq<id, {integer}>` to implement `Expression`
note: required for `string_primary_key::columns::id` to implement `diesel::EqAll<{integer}>`
   --> tests/fail/find_requires_correct_type.rs:13:9
    |
 LL |         id -> VarChar,
    |         ^^
    = note: required for `string_primary_key::table` to implement `FindDsl<{integer}>`
note: required by a bound in `diesel::QueryDsl::find`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn find<PK>(self, id: PK) -> Find<Self, PK>
    |        ---- required by a bound in this associated function
LL |     where
LL |         Self: methods::FindDsl<PK>,
    |               ^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::find`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `{integer}: ValidGrouping<()>` is not satisfied
   --> tests/fail/find_requires_correct_type.rs:24:36
    |
 LL |     string_primary_key::table.find(1);
    |                               ---- ^ the trait `ValidGrouping<()>` is not implemented for `{integer}`
    |                               |
    |                               required by a bound introduced by this call
    |
    = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
              AliasedField<S, C>
              int_primary_key::columns::id
              pg::metadata_lookup::pg_namespace::columns::nspname
              pg::metadata_lookup::pg_namespace::columns::oid
              pg::metadata_lookup::pg_type::columns::oid
              pg::metadata_lookup::pg_type::columns::typarray
              pg::metadata_lookup::pg_type::columns::typname
              pg::metadata_lookup::pg_type::columns::typnamespace
            and N others
    = note: required for `Eq<id, {integer}>` to implement `ValidGrouping<()>`
    = note: required for `Grouped<Eq<id, {integer}>>` to implement `NonAggregate`
    = note: required for `SelectStatement<FromClause<table>>` to implement `FilterDsl<Grouped<Eq<id, {integer}>>>`
    = note: 1 redundant requirement hidden
    = note: required for `string_primary_key::table` to implement `FilterDsl<Grouped<Eq<id, {integer}>>>`
    = note: required for `string_primary_key::table` to implement `FindDsl<{integer}>`
note: required by a bound in `diesel::QueryDsl::find`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn find<PK>(self, id: PK) -> Find<Self, PK>
    |        ---- required by a bound in this associated function
LL |     where
LL |         Self: methods::FindDsl<PK>,
    |               ^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::find`
 
    For more information about this error, try `rustc --explain E0277`.
